# coin-ticker

./: Cargo.toml  README.md
src/: config.rs  main.rs  ticker_worker.rs
src/api/: mod.rs  model.rs  ws_client.rs  ws_ops.rs
src/tui/: app.rs  grid.rs  market_summary.rs  mod.rs
