[package]
name = "coin-ticker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
url = "2.2"
futures-util = "0.3"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
crossbeam-channel = "0.5"
crossterm = "0.20.0"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
clap = { version = "3.1.2", features = ['cargo'] }